Added Control For users Added Some logic for user models

--- a/DMS_Solution/StaffClientApplication/StaffClientApplication.csproj
+++ b/DMS_Solution/StaffClientApplication/StaffClientApplication.csproj
@@ -72,6 +72,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Models\UserModel.cs" />
     <Compile Include="ViewModels\AppMainWindowViewModel.cs" />
     <Compile Include="ViewModels\LoginUCViewModel.cs" />
     <Compile Include="ViewModels\StaffControlUCViewModel.cs" />
@@ -113,7 +114,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Models\" />
     <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
