queue service: 1. add controller 2. add queue service

--- a/DMS_Web_APIs/QueueService/appsettings.json
+++ b/DMS_Web_APIs/QueueService/appsettings.json
@@ -4,5 +4,11 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "Data": {
+    "Azure": {
+      "ConnectionString": "UseDevelopmentStorage=true",
+      "QueueNames": [ "pharmacist", "nurse" ]
+    }
+  }
+}        
