Added CustomerResponse model to Common

--- a/DMS_Solution/QueueRegistrationApp/QueueRegistrationApp.csproj
+++ b/DMS_Solution/QueueRegistrationApp/QueueRegistrationApp.csproj
@@ -76,6 +76,7 @@
     </ApplicationDefinition>
     <Compile Include="Models\Patient.cs" />
     <Compile Include="Services\IQueueRegisterService.cs" />
+    <Compile Include="Services\IUserActionsService.cs" />
     <Compile Include="Services\QueueActions.cs" />
     <Compile Include="ViewModels\AppMainWindowViewModel.cs" />
     <Compile Include="ViewModels\QueueDetailsDisplayViewModel.cs" />
