Change from queue to tableStorage

--- a/DMS_Web_APIs/QueueService/appsettings.json
+++ b/DMS_Web_APIs/QueueService/appsettings.json
@@ -8,7 +8,7 @@
   "Data": {
     "Azure": {
       "ConnectionString": "UseDevelopmentStorage=true",
-      "QueueNames": [ "pharmacist", "nurse" ]
+      "TablesToCreate": [ "pharmacist", "nurse" ]
     }
   }
 }        
