--- a/DMS_Solution/QueueRegistrationApp/QueueRegistrationApp.csproj
+++ b/DMS_Solution/QueueRegistrationApp/QueueRegistrationApp.csproj
@@ -77,7 +77,7 @@
     <Compile Include="Models\Patient.cs" />
     <Compile Include="Services\IClientHttpActions.cs" />
     <Compile Include="Services\ClientHttpActions.cs" />
-    <Compile Include="Services\NavigationDialog.cs" />
+    <Compile Include="Services\ViewsDialog.cs" />
     <Compile Include="ViewModels\AppMainWindowViewModel.cs" />
     <Compile Include="ViewModels\QueueDetailsDisplayViewModel.cs" />
     <Compile Include="ViewModels\SelectQueueComponentViewModel.cs" />
