AddQueue: HttpPost, endpoint: https://localhost:44305/api/queue

--- a/DMS_Web_APIs/QueueService/appsettings.json
+++ b/DMS_Web_APIs/QueueService/appsettings.json
@@ -8,7 +8,8 @@
   "Data": {
     "Azure": {
       "ConnectionString": "UseDevelopmentStorage=true",
-      "TablesToCreate": [ "pharmacist", "nurse" ]
+      "NextTable": "nextappointmenttable",
+      "QueuesToCreate": [ "pharmacist", "nurse" ]
     }
   }
 }        
