Started to fix the display of the queue. Still stuck on the timer event

--- a/DMS_Solution/QueueRegisteringClient/QueueRegisteringClient.csproj
+++ b/DMS_Solution/QueueRegisteringClient/QueueRegisteringClient.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Utility\ChangeViewEvent.cs" />
     <Compile Include="Utility\SendPatientEvent.cs" />
     <Compile Include="ViewModels\AppMainWindowViewModel.cs" />
+    <Compile Include="ViewModels\QueueDetailsDisplayComponentViewModel.cs" />
     <Compile Include="ViewModels\QueueDetailsDisplayViewModel.cs" />
     <Compile Include="ViewModels\SelectQueueComponentViewModel.cs" />
     <Compile Include="ViewModels\WelcomeComponentViewModel.cs" />
@@ -75,6 +76,9 @@
     </Compile>
     <Compile Include="Views\QueueDetailsDisplay.xaml.cs">
       <DependentUpon>QueueDetailsDisplay.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\QueueDetailsDisplayComponent.xaml.cs">
+      <DependentUpon>QueueDetailsDisplayComponent.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\SelectQueueComponent.xaml.cs">
       <DependentUpon>SelectQueueComponent.xaml</DependentUpon>
@@ -129,6 +133,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\QueueDetailsDisplay.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\QueueDetailsDisplayComponent.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
