--- a/DMS_Solution/StaffStationClient/StaffStationClient.csproj
+++ b/DMS_Solution/StaffStationClient/StaffStationClient.csproj
@@ -61,8 +61,12 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Models\StationModel.cs" />
+    <Compile Include="Services\DialogService.cs" />
     <Compile Include="Services\HttpActionsService.cs" />
+    <Compile Include="Services\IDialogService.cs" />
     <Compile Include="Services\IHttpActions.cs" />
+    <Compile Include="Utility\ChangeViewEvent.cs" />
+    <Compile Include="Utility\SendModelEvent.cs" />
     <Compile Include="ViewModels\AppMainWindowViewModel.cs" />
     <Compile Include="ViewModels\LoginUCViewModel.cs" />
     <Compile Include="ViewModels\StaffControlUCViewModel.cs" />
@@ -75,6 +79,7 @@
     <Compile Include="Views\StaffControlUC.xaml.cs">
       <DependentUpon>StaffControlUC.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ViewType.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
