--- a/DMS_Web_APIs/ManagementService/ManagementService.csproj
+++ b/DMS_Web_APIs/ManagementService/ManagementService.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\Models\" />
+    <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
 
 </Project>
