--- a/DMS_Solution/QueueRegisteringClient.Tests/packages.config
+++ b/DMS_Solution/QueueRegisteringClient.Tests/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net472" />
+  <package id="Prism.Core" version="7.1.0.431" targetFramework="net472" />
 </packages>
