Added more test mockups

--- a/DMS_Solution/QueueRegisteringClient.Tests/QueueRegisteringClient.Tests.csproj
+++ b/DMS_Solution/QueueRegisteringClient.Tests/QueueRegisteringClient.Tests.csproj
@@ -45,6 +45,7 @@
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\MSTest.TestFramework.1.3.2\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationFramework" />
     <Reference Include="Prism, Version=7.1.0.431, Culture=neutral, PublicKeyToken=40ee6c3a2184dc59, processorArchitecture=MSIL">
       <HintPath>..\packages\Prism.Core.7.1.0.431\lib\net45\Prism.dll</HintPath>
     </Reference>
@@ -54,6 +55,8 @@
   <ItemGroup>
     <Compile Include="Mocks\ClientHttpActionsMockup.cs" />
     <Compile Include="Mocks\MockRepository.cs" />
+    <Compile Include="Mocks\ViewDialogMockup.cs" />
+    <Compile Include="AppMainWindowViewModelTests.cs" />
     <Compile Include="WelcomeComponentTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
