--- a/DMS_Solution/QueueRegisteringClient/Properties/Settings.settings
+++ b/DMS_Solution/QueueRegisteringClient/Properties/Settings.settings
@@ -1,7 +1,9 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="uri:settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="QueueRegisteringClient.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="CurrentDay" Type="System.DateTime" Scope="User">
+      <Value Profile="(Default)">06/22/2019 18:42:00</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
