--- a/DMS_Solution/QueueRegisteringClient.Tests/QueueRegisteringClient.Tests.csproj
+++ b/DMS_Solution/QueueRegisteringClient.Tests/QueueRegisteringClient.Tests.csproj
@@ -57,9 +57,11 @@
   <ItemGroup>
     <Compile Include="Mocks\ApplicationServiceMockup.cs" />
     <Compile Include="Mocks\ClientHttpActionsMockup.cs" />
+    <Compile Include="Mocks\EventFireMockup.cs" />
     <Compile Include="Mocks\MockRepository.cs" />
     <Compile Include="Mocks\ViewDialogMockup.cs" />
     <Compile Include="SelectQueueComponentViewModelTests.cs" />
+    <Compile Include="QueueDetailsDisplayComponentViewModelTests.cs" />
     <Compile Include="WelcomeComponentTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
