--- a/DMS_Solution/QueueDisplayTvClient/QueueDisplayTvClient.csproj
+++ b/DMS_Solution/QueueDisplayTvClient/QueueDisplayTvClient.csproj
@@ -65,6 +65,9 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Models\Station.cs" />
+    <Compile Include="SignalRservice\Notification\INotificationHandler.cs" />
+    <Compile Include="SignalRservice\Notification\NotificationHandler.cs" />
+    <Compile Include="SignalRservice\NotificationService.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -109,5 +112,6 @@
       <Name>Common</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
