--- a/DMS_Solution/ClinicManager/ClinicManager.csproj
+++ b/DMS_Solution/ClinicManager/ClinicManager.csproj
@@ -59,6 +59,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="CustomCommand.cs" />
     <Compile Include="Services\IManagementApiService.cs" />
     <Compile Include="Services\ManagementApiService.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
@@ -98,9 +99,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Page Include="Views\MainWindow.xaml">
       <SubType>Designer</SubType>
