--- a/DMS_Solution/ClinicManager/ClinicManager.csproj
+++ b/DMS_Solution/ClinicManager/ClinicManager.csproj
@@ -61,6 +61,8 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="CustomCommand.cs" />
+    <Compile Include="Services\DialogService.cs" />
+    <Compile Include="Services\IDialogService.cs" />
     <Compile Include="Services\IManagementApiService.cs" />
     <Compile Include="Services\ManagementApiService.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
