added staff type selection to TV

--- a/DMS_Solution/QueueDisplayTvClient/QueueDisplayTvClient.csproj
+++ b/DMS_Solution/QueueDisplayTvClient/QueueDisplayTvClient.csproj
@@ -71,6 +71,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModels\SelectTypeWindowDialogViewModel.cs" />
+    <Compile Include="Views\SelectTypeWindowDialog.xaml.cs">
+      <DependentUpon>SelectTypeWindowDialog.xaml</DependentUpon>
+    </Compile>
     <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -88,6 +92,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\SelectTypeWindowDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
